--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet langchain langchain-community"
+    "#%pip install --upgrade --quiet langchain langchain-community"
    ]
   },
   {
@@ -60,15 +60,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "import getpass\n",
+    "import torch\n",
     "import os\n",
     "# os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "# os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
+    "# os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()\n",
+    "\n",
+    "print(torch.cuda.is_available())\n",
+    "\n",
+    "# set device to GPU if available\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
    ]
   },
   {
@@ -89,11 +103,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\KK\\AppData\\Local\\Temp\\ipykernel_14976\\127298619.py:5: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "  model = Ollama(model=\"phi3\")\n"
+     ]
+    }
+   ],
    "source": [
+    "#!pip install langchain-community\n",
+    "\n",
     "from langchain_community.llms import Ollama\n",
     "\n",
     "model = Ollama(model=\"phi3\")"
@@ -213,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -247,12 +272,15 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"name\": \"add\",\n",
-      "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
-      "    }\n",
-      "}\n"
+      "  \"name\": \"add\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 3,\n",
+      "    \"y\": 1132\n",
+      "  }\n",
+      "}\n",
+      "\n",
+      "\n",
+      "Documentation is intentionally omitted as it would not change the code's functionality. The JSON response clearly indicates which tool to use and what arguments are necessary based on the user input provided above.\n"
      ]
     }
    ],
@@ -280,17 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -388,7 +416,7 @@
        "15.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,24 +437,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "53.83784653"
+       "121.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "chain = prompt | model | JsonOutputParser() | invoke_tool\n",
-    "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})"
+    "chain.invoke({\"input\": \"what's eleven times 11\"})"
    ]
   },
   {
@@ -441,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -453,7 +481,7 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,11 +511,21 @@
     "1. Provide few shot examples.\n",
     "2. Add error handling (e.g., catch the exception and feed it back to the LLM to ask it to correct its previous output)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6b69fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Understand. Yes have provided few shot examples to models and handled errors to catch the exception cases. "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
