--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -42,10 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install --upgrade --quiet langchain langchain-community"
    ]
@@ -60,15 +68,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
    "source": [
     "import getpass\n",
     "import os\n",
-    "# os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "# os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
+    "\n",
+    "# Enable LangSmith tracing\n",
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "\n",
+    "# Prompt the user to securely input the LangChain API key\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass(\"Enter your LangChain API key: \")\n"
    ]
   },
   {
@@ -89,14 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.llms import Ollama\n",
+    "from langchain_ollama import OllamaLLM\n",
     "\n",
-    "model = Ollama(model=\"phi3\")"
+    "model = OllamaLLM(model=\"phi3\")\n"
    ]
   },
   {
@@ -111,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -158,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "be77e780",
    "metadata": {},
    "outputs": [
@@ -168,7 +180,7 @@
        "20.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -213,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -247,16 +259,17 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"name\": \"add\",\n",
-      "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
-      "    }\n",
+      "  \"name\": \"add\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 3,\n",
+      "    \"y\": 1132\n",
+      "  }\n",
       "}\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "chain = prompt | model\n",
     "message = chain.invoke({\"input\": \"what's 3 plus 1132\"})\n",
     "\n",
@@ -266,6 +279,29 @@
     "    print(message)\n",
     "else:  # Otherwise it's a chat model\n",
     "    print(message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_ollama import OllamaLLM\n",
+    "\n",
+    "model = OllamaLLM(model=\"phi3\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f31311b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_ollama import OllamaLLM\n",
+    "\n",
+    "model = OllamaLLM(model=\"phi3\")\n"
    ]
   },
   {
@@ -280,17 +316,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -388,7 +424,7 @@
        "15.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
@@ -419,7 +455,7 @@
        "53.83784653"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -453,7 +489,7 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,11 +519,99 @@
     "1. Provide few shot examples.\n",
     "2. Add error handling (e.g., catch the exception and feed it back to the LLM to ask it to correct its previous output)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc519fdf",
+   "metadata": {},
+   "source": [
+    "1. Few-Shot Examples to Improve Accuracy:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ddcdafea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
+    "# Add few-shot examples to the prompt\n",
+    "few_shot_examples = \"\"\"\n",
+    "Examples:\n",
+    "1. User: What's 3 plus 4?\n",
+    "   Assistant: {\"name\": \"add\", \"arguments\": {\"x\": 3, \"y\": 4}}\n",
+    "\n",
+    "2. User: Multiply 5 by 7.\n",
+    "   Assistant: {\"name\": \"multiply\", \"arguments\": {\"x\": 5, \"y\": 7}}\n",
+    "\"\"\"\n",
+    "\n",
+    "system_prompt = f\"\"\"{few_shot_examples}\n",
+    "You are an assistant that can perform mathematical operations like addition and multiplication.\n",
+    "Given the user input, return the name and input of the tool to use. \n",
+    "Return your response as a JSON blob with 'name' and 'arguments' keys.\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages([(\"system\", system_prompt), (\"user\", \"{input}\")])\n",
+    "\n",
+    "# Use the prompt in the chain\n",
+    "chain = prompt | model | JsonOutputParser()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20a3d392",
+   "metadata": {},
+   "source": [
+    "2. Add Error Handling:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "21ac0d35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: The tool 'non_existing_tool' is not available. Please check the tool name.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Any, Dict, Optional, TypedDict\n",
+    "from langchain_core.runnables import RunnableConfig\n",
+    "\n",
+    "class ToolCallRequest(TypedDict):\n",
+    "    name: str\n",
+    "    arguments: Dict[str, Any]\n",
+    "\n",
+    "def invoke_tool_with_error_handling(tool_call_request: ToolCallRequest, config: Optional[RunnableConfig] = None):\n",
+    "    try:\n",
+    "        # Tool invocation logic\n",
+    "        tool_name_to_tool = {tool.name: tool for tool in tools}\n",
+    "        name = tool_call_request[\"name\"]\n",
+    "        requested_tool = tool_name_to_tool[name]\n",
+    "        return requested_tool.invoke(tool_call_request[\"arguments\"], config=config)\n",
+    "    except KeyError as e:\n",
+    "        # Handle unknown tool name\n",
+    "        return f\"Error: The tool '{e.args[0]}' is not available. Please check the tool name.\"\n",
+    "    except Exception as e:\n",
+    "        # Handle general errors\n",
+    "        return f\"Error: {str(e)}. Please correct the input and try again.\"\n",
+    "\n",
+    "# Testing error handling\n",
+    "result = invoke_tool_with_error_handling({\"name\": \"non_existing_tool\", \"arguments\": {\"x\": 3, \"y\": 5}})\n",
+    "print(result)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "langchain",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
