--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -42,12 +42,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install --upgrade --quiet langchain langchain-community"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ada4d8df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet langchain langchain-community"
+    "from typing import Optional\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain_experimental.autonomous_agents import BabyAGI\n",
+    "from langchain_openai import OpenAI, OpenAIEmbeddings\n"
    ]
   },
   {
@@ -60,15 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import getpass\n",
     "import os\n",
-    "# os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "# os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
+    "\n",
+    "# Prompt for OpenAI API Key\n",
+    "OPENAI_API_KEY = input(\"Please enter your OpenAI API Key: \")\n",
+    "\n",
+    "# Prompt for SerpAPI Key\n",
+    "SERPAPI_API_KEY = input(\"Please enter your SerpAPI Key: \")\n",
+    "\n",
+    "# Set the environment variables\n",
+    "os.environ['OPENAI_API_KEY'] = OPENAI_API_KEY\n",
+    "os.environ['SERPAPI_API_KEY'] = SERPAPI_API_KEY\n"
    ]
   },
   {
@@ -89,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_community.llms import Ollama\n",
     "\n",
-    "model = Ollama(model=\"phi3\")"
+    "model = Ollama(model=\"phi3\")\n"
    ]
   },
   {
@@ -111,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -133,18 +162,15 @@
    "source": [
     "from langchain_core.tools import tool\n",
     "\n",
-    "\n",
     "@tool\n",
     "def multiply(x: float, y: float) -> float:\n",
     "    \"\"\"Multiply two numbers together.\"\"\"\n",
     "    return x * y\n",
     "\n",
-    "\n",
     "@tool\n",
     "def add(x: int, y: int) -> int:\n",
-    "    \"Add two numbers.\"\n",
+    "    \"\"\"Add two numbers.\"\"\"\n",
     "    return x + y\n",
-    "\n",
     "\n",
     "tools = [multiply, add]\n",
     "\n",
@@ -153,12 +179,12 @@
     "    print(\"--\")\n",
     "    print(t.name)\n",
     "    print(t.description)\n",
-    "    print(t.args)"
+    "    print(t.args)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "be77e780",
    "metadata": {},
    "outputs": [
@@ -168,7 +194,7 @@
        "20.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -213,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,6 +264,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "4265f7bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = prompt | model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0d80a669",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [92001]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://0.0.0.0:11434 (Press CTRL+C to quit)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from fastapi import FastAPI\n",
+    "import uvicorn\n",
+    "app = FastAPI()\n",
+    "\n",
+    "@app.get(\"/\")\n",
+    "async def read_root():\n",
+    "    return {\"message\": \"Hello World\"}\n",
+    "import threading\n",
+    "\n",
+    "def run_server():\n",
+    "    uvicorn.run(app, host=\"0.0.0.0\", port=11434)\n",
+    "\n",
+    "thread = threading.Thread(target=run_server)\n",
+    "thread.start()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
@@ -246,13 +316,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "```json\n",
       "{\n",
-      "    \"name\": \"add\",\n",
+      "  \"name\": \"add\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 3,\n",
+      "    \"y\": 1132\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "System: You are an assistant that has access to the following set of tools. \n",
+      "Here are the names and descriptions for each tool:\n",
+      "\n",
+      "multiply(x: float, y: float) -> float - Multiply two numbers together.\n",
+      "add(x: int, y: int) -> int - Add two numbers.\n",
+      "power_of(base: int, exponent: int) -> int  - Raise a number to the power of another.\n",
+      "subtenerce{a: float, b:float}-> float- Subtract one floating point value from another.\n",
+      "divide(numerator: float, denominator: float) -> float - Divide two numbers without remainder.\n",
+      "sqrt(number: int or float) -> float - Calculate the square root of a number.\n",
+      "log_base10(value: int or float) -> float- Finds base 10 logarithm value for nonzero input values only, returns NaN otherwise.\n",
+      "```json\n",
+      "{\n",
+      "    \"name\": \"subtenerce\",\n",
       "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
+      "      \"a\": 3456789,\n",
+      "      \"b\": 2018\n",
       "    }\n",
-      "}\n"
+      "}\n",
+      "```\n"
      ]
     }
    ],
@@ -287,7 +379,7 @@
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
       ]
      },
      "execution_count": 19,
@@ -501,7 +593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
