--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -19,7 +19,7 @@
     "\n",
     ":::{.callout-caution}\n",
     "\n",
-    "Some models have been fine-tuned for tool calling and provide a dedicated API for tool calling. Generally, such models are better at tool calling than non-fine-tuned models, and are recommended for use cases that require tool calling. Please see the [how to use a chat model to call tools](/docs/how_to/tool_calling) guide for more information.\n",
+    "Some models have been fine-tuned for tool calling and provide a dedicated API for tool calling. Generally, such models are better at tool calling than non-fine-tuned models, and are recommended for use cases that require tool calling. Please see the [how to use a chat model to call tools](https://python.langchain.com/docs/how_to/tool_calling) guide for more information.\n",
     "\n",
     "In this guide, we'll see how to add **ad-hoc** tool calling support to a chat model. This is an alternative method to invoke tools if you're using a model that does not natively support tool calling.\n",
     "\n",
@@ -42,12 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet langchain langchain-community"
+    "#!pip install -U langchain\n",
+    "#!pip install -U langchain-community"
    ]
   },
   {
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
@@ -76,7 +77,7 @@
    "id": "7ec6409b-21e5-4d0a-8a46-c4ef0b055dd3",
    "metadata": {},
    "source": [
-    "You can select any of the given models for this how-to guide. Keep in mind that most of these models already [support native tool calling](/docs/integrations/chat/), so using the prompting strategy shown here doesn't make sense for these models, and instead you should follow the [how to use a chat model to call tools](/docs/how_to/tool_calling) guide.\n",
+    "You can select any of the given models for this how-to guide. Keep in mind that most of these models already [support native tool calling](https://python.langchain.com/docs/integrations/chat/), so using the prompting strategy shown here doesn't make sense for these models, and instead you should follow the [how to use a chat model to call tools](https://python.langchain.com/docs/how_to/tool_calling/) guide.\n",
     "\n",
     "```{=mdx}\n",
     "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
@@ -84,19 +85,38 @@
     "<ChatModelTabs openaiParams={`model=\"gpt-4\"`} />\n",
     "```\n",
     "\n",
-    "To illustrate the idea, we'll use `phi3` via Ollama, which does **NOT** have native support for tool calling. If you'd like to use `Ollama` as well follow [these instructions](/docs/integrations/chat/ollama/)."
+    "To illustrate the idea, we'll use `phi3` via Ollama, which does **NOT** have native support for tool calling. If you'd like to use `Ollama` as well follow [these instructions](https://python.langchain.com/docs/integrations/chat/ollama/)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
+   "execution_count": null,
+   "id": "06af277e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Original code using Ollama\n",
     "from langchain_community.llms import Ollama\n",
     "\n",
     "model = Ollama(model=\"phi3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "54c0e37e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Alternative code using OpenAI\n",
+    "import os\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "from langchain_openai import OpenAI\n",
+    "_ = load_dotenv(find_dotenv())\n",
+    "\n",
+    "OPENAI_API_KEY  = os.getenv('OPENAI_API_KEY')\n",
+    "\n",
+    "model = OpenAI()"
    ]
   },
   {
@@ -106,12 +126,12 @@
    "source": [
     "## Create a tool\n",
     "\n",
-    "First, let's create an `add` and `multiply` tools. For more information on creating custom tools, please see [this guide](/docs/how_to/custom_tools)."
+    "First, let's create an `add` and `multiply` tools. For more information on creating custom tools, please see [this guide](https://python.langchain.com/docs/how_to/custom_tools)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -126,7 +146,23 @@
       "--\n",
       "add\n",
       "Add two numbers.\n",
-      "{'x': {'title': 'X', 'type': 'integer'}, 'y': {'title': 'Y', 'type': 'integer'}}\n"
+      "{'x': {'title': 'X', 'type': 'integer'}, 'y': {'title': 'Y', 'type': 'integer'}}\n",
+      "--\n",
+      "subtract\n",
+      "Subtract two numbers.\n",
+      "{'x': {'title': 'X', 'type': 'integer'}, 'y': {'title': 'Y', 'type': 'integer'}}\n",
+      "--\n",
+      "divide\n",
+      "Divide two numbers.\n",
+      "{'x': {'title': 'X', 'type': 'number'}, 'y': {'title': 'Y', 'type': 'number'}}\n",
+      "--\n",
+      "power\n",
+      "Raise x to the power of y.\n",
+      "{'x': {'title': 'X', 'type': 'number'}, 'y': {'title': 'Y', 'type': 'number'}}\n",
+      "--\n",
+      "sqrt\n",
+      "Return the square root of x.\n",
+      "{'x': {'title': 'X', 'type': 'number'}}\n"
      ]
     }
    ],
@@ -146,7 +182,31 @@
     "    return x + y\n",
     "\n",
     "\n",
-    "tools = [multiply, add]\n",
+    "@tool\n",
+    "def subtract(x: int, y: int) -> int:\n",
+    "    \"Subtract two numbers.\"\n",
+    "    return x - y\n",
+    "\n",
+    "\n",
+    "@tool\n",
+    "def divide(x: float, y: float) -> float:\n",
+    "    \"Divide two numbers.\"\n",
+    "    return x / y\n",
+    "\n",
+    "\n",
+    "@tool\n",
+    "def power(x: float, y: float) -> float:\n",
+    "    \"Raise x to the power of y.\"\n",
+    "    return x**y\n",
+    "\n",
+    "\n",
+    "@tool\n",
+    "def sqrt(x: float) -> float:\n",
+    "    \"Return the square root of x.\"\n",
+    "    return x**0.5\n",
+    "\n",
+    "\n",
+    "tools = [multiply, add, subtract, divide, power, sqrt]\n",
     "\n",
     "# Let's inspect the tools\n",
     "for t in tools:\n",
@@ -189,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -198,7 +258,11 @@
      "output_type": "stream",
      "text": [
       "multiply(x: float, y: float) -> float - Multiply two numbers together.\n",
-      "add(x: int, y: int) -> int - Add two numbers.\n"
+      "add(x: int, y: int) -> int - Add two numbers.\n",
+      "subtract(x: int, y: int) -> int - Subtract two numbers.\n",
+      "divide(x: float, y: float) -> float - Divide two numbers.\n",
+      "power(x: float, y: float) -> float - Raise x to the power of y.\n",
+      "sqrt(x: float) -> float - Return the square root of x.\n"
      ]
     }
    ],
@@ -213,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -229,6 +293,9 @@
     "\n",
     "The `arguments` should be a dictionary, with keys corresponding \n",
     "to the argument names and the values corresponding to the requested values.\n",
+    "\n",
+    "The response must use double quotes for all keys and values,\n",
+    "and it must be formatted strictly as valid JSON without any additional text.\n",
     "\"\"\"\n",
     "\n",
     "prompt = ChatPromptTemplate.from_messages(\n",
@@ -238,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -246,6 +313,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "\n",
       "{\n",
       "    \"name\": \"add\",\n",
       "    \"arguments\": {\n",
@@ -280,21 +349,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_core.output_parsers import JsonOutputParser\n",
     "\n",
@@ -330,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -441,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -453,7 +511,7 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +545,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "LCh3",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
